<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_elevation">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_title" />

        <TextView
            android:id="@+id/script_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_title"
            android:singleLine="true" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_layout"
        android:text="@string/label_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_prompt"
        android:layout_below="@+id/tv_content"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/script_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top" />
    </ScrollView>

    <Button
        android:id="@+id/btn_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:contentDescription="@string/desc_prompt_script"
        android:text="@string/btn_txt_prompt" />
</RelativeLayout>